--- a/themes/charlolamode/layouts/partials/head.html
+++ b/themes/charlolamode/layouts/partials/head.html
@@ -7,6 +7,11 @@
 <meta name="robots" content="noindex, nofollow">
 {{- end }}
 
+<meta
+  name="google-site-verification"
+  content="l3WegMrV1k4rbADTUQMxoZZyLoAgDrFOwKHE8pvE2oY"
+/>
+
 {{- /* Title */}}
 <title>{{ if .IsHome }}{{ else }}{{ if .Title }}{{ .Title }} | {{ end }}{{ end }}{{ .Site.Title }}</title>
 
