--- a/themes/charlolamode/assets/css/common/header.css
+++ b/themes/charlolamode/assets/css/common/header.css
@@ -20,6 +20,9 @@
 
 .logo {
   flex-wrap: inherit;
+  display: flex;
+  align-items: center;
+  gap: 8px;
 }
 
 .logo a {
@@ -42,7 +45,6 @@
 
 button#theme-toggle {
   font-size: 26px;
-  margin: auto 4px;
 }
 
 body.dark #moon {
@@ -85,7 +87,6 @@ body:not(.dark) #sun {
 .lang-switch ul,
 .logo-switches {
   display: inline-flex;
-  margin: auto 4px;
 }
 
 .lang-switch {
