feat(founders): make page responsive

--- a/themes/charlolamode/layouts/partials/founder.html
+++ b/themes/charlolamode/layouts/partials/founder.html
@@ -1,5 +1,5 @@
 <div class="founder-card">
-  <img src="{{ .picture | absURL }}" alt="{{ .fullname }}" height="200px"/>
+  <img src="{{ .picture | absURL }}" alt="{{ .fullname }}" />
   <h3>{{ .fullname }}</h3>
   <p>{{ .bio | markdownify }}</p>
 </div>
