feat(home): put color on buttons

--- a/themes/charlolamode/assets/css/common/profile-mode.css
+++ b/themes/charlolamode/assets/css/common/profile-mode.css
@@ -22,12 +22,12 @@
 
 .buttons {
     flex-wrap: wrap;
-    max-width: 400px;
     margin: 0 auto;
 }
 
 .button {
-    background: var(--tertiary);
+    background: var(--accent);
+    color: var(--accent-contrast);
     border-radius: var(--radius);
     margin: 8px;
     padding: 6px;
