--- a/themes/charlolamode/assets/css/core/theme-vars.css
+++ b/themes/charlolamode/assets/css/core/theme-vars.css
@@ -17,6 +17,7 @@
   --border: rgb(238, 238, 238);
   --transition-duration: 0.2s;
   --accent: #CA5516;
+  --accent-contrast: rgb(245,245,245);
 }
 
 .dark {
@@ -29,6 +30,8 @@
   --hljs-bg: rgb(46, 46, 51);
   --code-bg: rgb(55, 56, 62);
   --border: rgb(51, 51, 51);
+  --accent: #F29100;
+  --accent-contrast: rgb(245, 245, 245);
 }
 
 .list {
