feat: update home page style

--- a/themes/charlolamode/layouts/partials/index_profile.html
+++ b/themes/charlolamode/layouts/partials/index_profile.html
@@ -20,6 +20,8 @@
 
         <div class="profile-description">{{ .description | markdownify }}</div>
 
+        <a class="profile-about-link" href="/presentation">En savoir plus</a>
+
         {{- partial "social_icons.html" $.Site.Params.socialIcons -}}
     </div>
     {{- end}}
