--- a/themes/charlolamode/assets/css/common/profile-mode.css
+++ b/themes/charlolamode/assets/css/common/profile-mode.css
@@ -11,7 +11,7 @@
 }
 
 .profile .profile_inner h1 {
-    padding: 12px 0;
+    padding-bottom: 12px;
 }
 
 .profile img {
@@ -49,11 +49,21 @@
 }
 
 .profile-description {
-    margin: 8px;
+    margin-top: 16px;
     color: var(--secondary);
     font-size: 20px;
     line-height: 1.6;
     display: --webkit-box;
     --webkit-box-orient: vertical
     max-width: 60ch;
+    text-align: justify;
+}
+
+.profile-about-link {
+    font-size: 20px;
+    line-height: 1.6;
+    display: --webkit-box;
+    --webkit-box-orient: vertical
+    max-width: 60ch;
+    text-decoration: underline;
 }
