feat: add youtube video

--- a/themes/charlolamode/layouts/partials/index_profile.html
+++ b/themes/charlolamode/layouts/partials/index_profile.html
@@ -6,6 +6,8 @@
             <h3>Rassembler nos fragments d'histoires pour reconstituer notre mémoire collective</span>
         </div>
 
+        <iframe style="aspect-ratio: 16/9; width: 100%;" src="https://www.youtube.com/embed/eI5RlvD8JYM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
         <h1>{{ .title | default $.Site.Title | markdownify }}</h1>
 
         {{- with .buttons }}
