feat: add link to gfc pharma

--- a/themes/charlolamode/assets/css/common/companies.css
+++ b/themes/charlolamode/assets/css/common/companies.css
@@ -11,6 +11,9 @@
   --height: 100px;
   grid-template-rows: var(--height) auto;
   place-items: center;
+  color: inherit;
+  text-decoration: inherit;
+  box-shadow: none !important;
 }
 
 .company img {
