--- a/themes/charlolamode/layouts/partials/post_meta.html
+++ b/themes/charlolamode/layouts/partials/post_meta.html
@@ -1,8 +1,7 @@
 {{- $scratch := newScratch }}
 
-
 {{- if not .Date.IsZero -}}
-{{- $scratch.Add "meta" (slice (printf "<span title='%s'>%s</span>" (.Date) (.Date | time.Format (default "January 2, 2006" .Site.Params.DateFormat)))) }}
+{{- $scratch.Add "meta" (slice (printf "%s" (.Date | time.Format "02/01/2006"))) }}
 {{- end }}
 
 {{- if (.Param "ShowReadingTime") -}}
@@ -13,11 +12,7 @@
 {{- $scratch.Add "meta" (slice (i18n "words" .WordCount | default (printf "%d words" .WordCount))) }}
 {{- end }}
 
-{{- with (partial "author.html" .) }}
-{{- $scratch.Add "meta" (slice .) }}
-{{- end }}
-
 {{- with ($scratch.Get "meta") }}
-{{- delimit . "&nbsp;·&nbsp;" -}}
+{{- delimit . " · " -}}
 {{- end -}}
 
