feat: restrict post image preview height

--- a/themes/charlolamode/assets/css/common/post-entry.css
+++ b/themes/charlolamode/assets/css/common/post-entry.css
@@ -144,3 +144,12 @@
     color: var(--secondary);
     box-shadow: 0 1px 0 var(--primary);
 }
+
+.list-entry-content {
+    display: flex;
+    justify-content: center;
+}
+
+.list-entry-content img {
+    height: 200px;
+}
