--- a/themes/charlolamode/layouts/_default/list.html
+++ b/themes/charlolamode/layouts/_default/list.html
@@ -64,7 +64,7 @@
     </section>
     {{- end }}
     {{- if .Params.image }}
-    <section class="entry-content">
+    <section class="entry-content list-entry-content">
       <img src="{{ .Params.image }}">
     </section>
     {{- end }}
